--- a/n01642795Cumulative1/Views/Teacher/Show.cshtml
+++ b/n01642795Cumulative1/Views/Teacher/Show.cshtml
@@ -11,6 +11,8 @@
     <a href="/Student/List">Students</a>
 </nav>
 
+<a href="/Teacher/DeleteConfirm/@Model.Teacher.TeacherId" style="color: red;">Delete</a>
+
 <h2>@Model.Teacher.TeacherFname @Model.Teacher.TeacherLname</h2>
 
 <h3>@Model.Teacher.EmployeeNumber</h3>
