Added update functionality

--- a/n01642795Cumulative1/Views/Teacher/Show.cshtml
+++ b/n01642795Cumulative1/Views/Teacher/Show.cshtml
@@ -11,7 +11,9 @@
     <a href="/Student/List">Students</a>
 </nav>
 
-<a href="/Teacher/DeleteConfirm/@Model.Teacher.TeacherId" style="color: red;">Delete</a>
+<a href="/Teacher/Edit/@Model.Teacher.TeacherId" style="color: slategray; text-decoration: none;">Update</a>
+
+<a href="/Teacher/DeleteConfirm/@Model.Teacher.TeacherId" style="color: red; text-decoration: none;">Delete</a>
 
 <h2>@Model.Teacher.TeacherFname @Model.Teacher.TeacherLname</h2>
 
