--- a/n01642795Cumulative1/Views/Teacher/Edit.cshtml
+++ b/n01642795Cumulative1/Views/Teacher/Edit.cshtml
@@ -1,14 +1,12 @@
-﻿
+﻿@model n01642795Cumulative1.Models.ViewModels.ShowTeacher
 @{
-    ViewBag.Title = "New";
+    ViewBag.Title = "Update";
 }
 
 <!--A view which allows users to enter information to create a new teacher in the database-->
-
 <!--client side validation - ensure user doesn't submit a form with invalid or missing information-->
 <!--using javascript to validate input text-->
 <script>
-
     function validateTeacherForm() {
         validTeacherData = true;
 
@@ -79,41 +77,39 @@
     <a href="/Student/List">Students</a>
 </nav>
 
-<h2>New Teacher</h2>
+<h2>Edit Teacher Information</h2>
+
+<a href="/Teacher/Show/@Model.Teacher.TeacherId">Back</a>
 
 <!--call function to validate form when submitted-->
-<form onsubmit="return validateTeacherForm()" method="POST" action="/Teacher/Create">
+<form onsubmit="return validateTeacherForm()" method="POST" action="/Teacher/Update/@Model.Teacher.TeacherId">
     <div>
         <label for="TeacherFname">First name:</label>
-        <input type="text" id="TeacherFname" name="TeacherFname" />
+        <input type="text" id="TeacherFname" name="TeacherFname" value="@Model.Teacher.TeacherFname"/>
     </div>
 
     <div>
         <label for="TeacherLname">Last name:</label>
-        <input type="text" id="TeacherLname" name="TeacherLname" />
+        <input type="text" id="TeacherLname" name="TeacherLname" value="@Model.Teacher.TeacherLname"/>
     </div>
 
     <div>
         <label for="EmployeeNumber">Employee number:</label>
-        <input type="text" id="EmployeeNumber" name="EmployeeNumber" />
+        <input type="text" id="EmployeeNumber" name="EmployeeNumber" value="@Model.Teacher.EmployeeNumber"/>
     </div>
 
     <div>
         <label for="HireDate">Hire date:</label>
-        <input type="text" id="HireDate" name="HireDate" />
+        <input type="text" id="HireDate" name="HireDate" value="@Model.Teacher.HireDate"/>
     </div>
 
     <div>
         <label for="Salary">Salary:</label>
-        <input type="text" id="Salary" name="Salary" />
+        <input type="text" id="Salary" name="Salary" value="@Model.Teacher.Salary"/>
 
     </div>
     <div>
-        <input type="submit" value="Create teacher" />
+        <input type="submit" value="Update teacher" />
     </div>
 </form>
-<p id="FnameError" style="display:none; color: red;">Please enter a first name.</p>
-<p id="LnameError" style="display:none; color: red;">Please enter a last name.</p>
-<p id="EmployeeNumberError" style="display:none; color: red;">Please enter an employee number.</p>
-<p id="HireDateError" style="display:none; color: red;">Please enter a valid hire date.</p>
-<p id="SalaryError" style="display:none; color: red;">Please enter a valid salary.</p>
+
