--- a/n01642795Cumulative1/Views/Teacher/New.cshtml
+++ b/n01642795Cumulative1/Views/Teacher/New.cshtml
@@ -4,7 +4,6 @@
 }
 
 <!--A view which allows users to enter information to create a new teacher in the database-->
-
 <!--client side validation - ensure user doesn't submit a form with invalid or missing information-->
 <!--using javascript to validate input text-->
 <script>
@@ -112,6 +111,7 @@
         <input type="submit" value="Create teacher" />
     </div>
 </form>
+<!-- error messages -->
 <p id="FnameError" style="display:none; color: red;">Please enter a first name.</p>
 <p id="LnameError" style="display:none; color: red;">Please enter a last name.</p>
 <p id="EmployeeNumberError" style="display:none; color: red;">Please enter an employee number.</p>
